[Gstreamer][HLS] Unable to play TED videos https://bugs.webkit.org/show_bug.cgi?id=174458

Reviewed by Xabier Rodriguez-Calvar.

Disable HLS support by default in GStreamer ports. The underlying GStreamer hlsdemux element is not
receiving much maintenance and its replacement, hlsdemux2, cannot be used by WebKit due to
sandboxing requirements.

Most websites should now fallback to MSE if HLS is not supported by the User-Agent. This was checked
on TED and Apple developer websites.

HLS support can be re-enabled at runtime by setting the `WEBKIT_GST_ENABLE_HLS_SUPPORT=1`
environment variable.

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::initializeDecoders):

Canonical link: https://commits.webkit.org/258717@main